@@ -1,3 +1,9 @@
+1998-11-10  Harri Porten  <porten@kde.org>
+
+	* Removed hardcoded localkdedir()
+
+	* Let KApplication() do the job of creating ~/.kde/share/config
+
 1998-10-31  Stefan Taferner  <taferner@kde.org> (KMail-1.0.6)
 
 	* Fixed: crash when fetching new mail and inbox folder
